force-app/main/default/objects/Grain_Contract__c/Grain_Contract__c.object-meta.xml
<CustomObject>
    <description>Object to house the Grain Contracts Manildra has with it&apos;s Growers</description>
    <label>Grain Contract</label>
    <nameField>
        <label>Grain Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grain Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>