force-app/main/default/objects/Grain_Contract__c/fields/Bin_Grade__c.field-meta.xml
<CustomField>
    <fullName>Bin_Grade__c</fullName>
    <description>Picklist field to house Bin Grade values, value selected from AGBOSS</description>
    <label>Bin Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bin_Grade</valueSetName>
    </valueSet>
</CustomField>