force-app/main/default/objects/Grain_Contract__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to Account to house the Broker record, if any.</description>
    <label>Broker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Grain Contracts</relationshipLabel>
    <relationshipName>Grain_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>