force-app/main/default/objects/Grain_Contract__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <description>Text field to house Contract Number, coming in from AGBOSS</description>
    <label>Contract Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>