force-app/main/default/objects/Grain_Contract__c/fields/Delivered_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Quantity__c</fullName>
    <description>Text field to house Delivered Quantity, coming in from AGBOSS</description>
    <label>Delivered Quantity</label>
    <length>16</length>
    <type>Text</type>
</CustomField>