force-app/main/default/objects/Grain_Contract__c/fields/Price_Basis__c.field-meta.xml
<CustomField>
    <fullName>Price_Basis__c</fullName>
    <description>Picklist field to house Price Basis values, coming in from AGBOSS</description>
    <label>Price Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivered Buyer</fullName>
            </value>
            <value>
                <fullName>Delivered Site</fullName>
            </value>
            <value>
                <fullName>Ex Farm</fullName>
            </value>
            <value>
                <fullName>FIS</fullName>
            </value>
            <value>
                <fullName>Track</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>