force-app/main/default/objects/Grain_Contract__c/fields/Price_Per_Metric_Tonne__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Metric_Tonne__c</fullName>
    <description>Currency field to house Price Per Metric Tonne values, value selected from AGBOSS</description>
    <label>Price Per Metric Tonne</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>