force-app/main/default/objects/Grain_Contract__c/fields/Principal_Grower_s_Number__c.field-meta.xml
<CustomField>
    <fullName>Principal_Grower_s_Number__c</fullName>
    <description>Text field to house Grower&apos;s Number values, coming in from AGBOSS</description>
    <label>Principal Grower&apos;s Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>