force-app/main/default/objects/Grain_Contract__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Text field to house Quantity values, coming in from AGBOSS</description>
    <label>Quantity</label>
    <length>16</length>
    <type>Text</type>
</CustomField>