force-app/main/default/objects/Grain_Contract__c/fields/Seller__c.field-meta.xml
<CustomField>
    <fullName>Seller__c</fullName>
    <description>Master-Detail to Account to indicate seller, coming in from AGBOSS</description>
    <label>Seller</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Grain Contracts (Seller)</relationshipLabel>
    <relationshipName>Grain_Contracts1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>