force-app/main/default/objects/Grain_Contract__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <description>Master-Detail relationship with Site, coming in from AGBOSS</description>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Grain Contracts</relationshipLabel>
    <relationshipName>Grain_Contracts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>