force-app/main/default/objects/Grain_Contract__c/fields/Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity__c</fullName>
    <description>Total Quantity of agreed upon grain delivery for the season, coming in from AGBOSS</description>
    <label>Total Quantity</label>
    <length>6</length>
    <type>Text</type>
</CustomField>