force-app/main/default/objects/Grain_Contract__c/fields/Undelivered_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Undelivered_Quantity__c</fullName>
    <description>Text field to house Undelivered Quantity data for the Grain Contract, coming in from AGBOSS</description>
    <label>Undelivered Quantity</label>
    <length>18</length>
    <type>Text</type>
</CustomField>